welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type i
    if (lookingFor==nums[i]) {
                         ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (lookingFor==nums[i]) {
                        ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to nums.length - 1) {
         ^